fix test / deprecations and surperflous graal metadata